DX_HEDA/objects/Hierarchy_Settings__c/fields/Accounts_Addresses_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Addresses_Enabled__c</fullName>
    <description>Record Types of those Accounts that should have multi-addresses enabled.</description>
    <inlineHelpText>Record Types of those Accounts that should have multi-addresses enabled.</inlineHelpText>
    <label>Multi-Address Accounts</label>
    <type>TextArea</type>
</CustomField>