DX_HEDA/objects/Hierarchy_Settings__c/fields/Accounts_to_Delete__c.field-meta.xml
<CustomField>
    <fullName>Accounts_to_Delete__c</fullName>
    <description>Record Types of those Accounts that should be deleted if all its children Contacts have been deleted.</description>
    <inlineHelpText>Record Types of those Accounts that should be deleted if all its children Contacts have been deleted.</inlineHelpText>
    <label>Accounts to Delete</label>
    <type>TextArea</type>
</CustomField>