DX_HEDA/objects/Hierarchy_Settings__c/fields/Affl_ProgEnroll_Del__c.field-meta.xml
<CustomField>
    <fullName>Affl_ProgEnroll_Del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if an Affiliation will be automatically deleted when the related Program Enrollment is deleted. Otherwise the status will be changed to Former.</description>
    <inlineHelpText>Determines if an Affiliation will be automatically deleted when the related Program Enrollment is deleted. Otherwise the status will be changed to Former.</inlineHelpText>
    <label>Affiliation Program Enrollment deletion</label>
    <type>Checkbox</type>
</CustomField>