DX_HEDA/objects/Hierarchy_Settings__c/fields/Affl_ProgEnroll_Del_Status__c.field-meta.xml
<CustomField>
    <fullName>Affl_ProgEnroll_Del_Status__c</fullName>
    <description>Status to change an Affilation to when the related Program Enrollment is deleted, if the option selected is to change its status instead of deleting it.</description>
    <inlineHelpText>Status to change an Affilation to when the related Program Enrollment is deleted, if the option selected is to change its status instead of deleting it.</inlineHelpText>
    <label>Affl status on Prog Enrollment deletion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>