DX_HEDA/objects/Hierarchy_Settings__c/fields/Disable_Error_Handling__c.field-meta.xml
<CustomField>
    <fullName>Disable_Error_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, HEDA's error handling framework is disabled.</description>
    <inlineHelpText>If checked, HEDA's error handling framework is disabled.</inlineHelpText>
    <label>Disable Error Handling</label>
    <type>Checkbox</type>
</CustomField>