DX_HEDA/objects/Hierarchy_Settings__c/fields/Enable_Course_Connections__c.field-meta.xml
<CustomField>
    <fullName>Enable_Course_Connections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Course Connections. Requires that at least two record types exist for Course Connections to be used for the default Active Student and Faculty.</description>
    <label>Enable Course Connections</label>
    <type>Checkbox</type>
</CustomField>