DX_HEDA/objects/Hierarchy_Settings__c/fields/Household_Addresses_RecType__c.field-meta.xml
<CustomField>
    <fullName>Household_Addresses_RecType__c</fullName>
    <description>Account record type that supports Household Addresses behavior.</description>
    <inlineHelpText>Account record type that supports Household Addresses behavior.</inlineHelpText>
    <label>Household Addresses Acc Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>